# job-logs

./: .gitignore  Cargo.toml
src/: config.rs  logging.rs  main.rs  model.rs  utils.rs
src/controllers/: job_monitor_controller.rs  mod.rs
src/services/: amazon_service.rs  mod.rs  notification_service.rs  persistence_service.rs  shutdown_service.rs  telegram_service.rs
