[package]
name = "job-log-moduler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-retry = "0.3"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
backoff = { version = "0.4", features = ["futures", "tokio"] }
futures-util = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.98"
colored = "2.1.0"
async-channel = "2.3.1"
toml = "0.8.23"